fixed typo in config properties and loader file

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-environment=stating
+environment=staging
 baseUrlStage=https://restful-booker.herokuapp.com
 baseUrlDev=https://restful-booker.herokuapp.com
 baseUrlQa=https://restful-booker.herokuapp.com
